2006-05-16  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/igraph/R/games.R (ba.game) : added 'power' argument

	* interfaces/R/src/rinterface.c (R_igraph_nonlinear_barabasi_game) :
	added

	* interfaces/R/igraph/R/measure.dynamics.R
	* interfaces/R/igraph/R/motifs.R
	* interfaces/R/igraph/R/attributes.R
	* interfaces/R/igraph/R/iterators.R
	* interfaces/R/igraph/R/minimum.spanning.tree.R
	* interfaces/R/igraph/R/plot.R
	* interfaces/R/igraph/R/community.R
	* interfaces/R/igraph/R/operators.R
	* interfaces/R/igraph/R/topology.R
	* interfaces/R/igraph/R/foreign.R
	* interfaces/R/igraph/R/layout.R
	* interfaces/R/igraph/R/interface.R
	* interfaces/R/igraph/R/print.R
	* interfaces/R/igraph/R/structure.info.R
	* interfaces/R/igraph/R/basic.R
	* interfaces/R/igraph/R/components.R
	* interfaces/R/igraph/R/conversion.R
	* interfaces/R/igraph/R/structural.properties.R
	* interfaces/R/igraph/R/tkplot.R
	* interfaces/R/igraph/R/cocitation.R
	* interfaces/R/igraph/R/centrality.R : is.igraph checks added

2006-05-15  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/igraph/R/attributes.R (get.graph.attribute)
	(set.graph.attribute, get.vertex.attribute, set.vertex.attribute)
	(get.edge.attribute, set.edge.attribute) : updated to new 
	attribute handling
	(list.graph.attributes, list.vertex.attributes, list.edge.attributes)
	(remove.graph.attributes, remove.vertex.atattributes)
	(remove.edge.attributes) : added, new attribute handling
	(g,e,v) : removed
	* interfaces/R/igraph/R/iterators.R (V, E) : updated, new iterators
	(igraph.vs.all, igraph.es.all, igraph.vs.vector, igraph.vs.vector)
	(print.igraphvsseq, print.igraphesseq, print.igraphvsvector)
	(print.igraphesvector, length.igraphvsseq, length.igraphesseq)
	(length.igraphvsvector, length.igraphesvector, igraph.vs.next)
	(igraph.vs.end, igraph.vs.get, igraph.vs.get.igraphvsseq)
	(igraph.vs.get.igraphvsvector, igraph.vs.reset, as.vector.igraphvssseq)
	(as.vector.igraphvsvector, igraph.es.next, igraph.es.end)